--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -15,16 +15,17 @@
 #
 
 # Additional logger names to configure (root logger is always configured)
-loggers=sun.rmi,org.jboss.shrinkwrap
-logger.org.jboss.shrinkwrap.level=INFO
-logger.sun.rmi.level=WARNING
+loggers=sun.rmi,com.arjuna,com.github.rhanus
+logger.sun.rmi.level=WARN
+logger.com.arjuna.level=WARN
+logger.com.github.rhanus.level=TRACE
 
 # Root logger level
-logger.level=DEBUG
+logger.level=INFO
 
 # Root logger handlers
-#logger.handlers=FILE, CONSOLE
-logger.handlers=FILE
+logger.handlers=FILE, CONSOLE
+#logger.handlers=FILE
 
 # Console handler configuration
 handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
@@ -35,10 +36,10 @@ handler.CONSOLE.formatter=PATTERN
 
 # File handler configuration
 handler.FILE=org.jboss.logmanager.handlers.FileHandler
-handler.FILE.level=DEBUG
+handler.FILE.level=TRACE
 handler.FILE.properties=autoFlush,fileName
 handler.FILE.autoFlush=true
-handler.FILE.fileName=./build/test.log
+handler.FILE.fileName=./target/test.log
 handler.FILE.formatter=PATTERN
 
 # Formatter pattern configuration
